--- a/sumic/Cargo.toml
+++ b/sumic/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "sumic"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-anyhow = "1.0.100"
-clap = { version = "4.5.54", features = ["derive"] }
-libsumi = { path = "../libsumi" }
-naga = { version = "28.0.0", features = ["glsl-in", "msl-out", "spv-out", "wgsl-out"] }
+clap = { version = "4.4", features = ["derive"] }
+anyhow = "1.0"
+logos = "0.13" # The new lexer engine
+naga = { version = "0.19", features = ["glsl-in", "msl-out", "wgsl-out"] }
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "sumic"
+path = "src/main.rs"
